[gd_scene load_steps=21 format=2]

[ext_resource path="res://falling_writer/assets/save.svg" type="Texture" id=1]
[ext_resource path="res://falling_writer/themes/dark.tres" type="Theme" id=2]
[ext_resource path="res://falling_writer/components/text_edit_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_1.wav" type="AudioStream" id=4]
[ext_resource path="res://falling_writer/scripts/text_edit_event.gd" type="Script" id=5]
[ext_resource path="res://falling_writer/components/splash_screen.tscn" type="PackedScene" id=6]
[ext_resource path="res://falling_writer/assets/file_upload.svg" type="Texture" id=7]
[ext_resource path="res://falling_writer/assets/light.png" type="Texture" id=8]
[ext_resource path="res://falling_writer/assets/minus.svg" type="Texture" id=9]
[ext_resource path="res://falling_writer/assets/new.svg" type="Texture" id=10]
[ext_resource path="res://falling_writer/assets/plus.svg" type="Texture" id=11]
[ext_resource path="res://falling_writer/components/falling_lable_box.tscn" type="PackedScene" id=13]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_5.wav" type="AudioStream" id=14]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_3.wav" type="AudioStream" id=15]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_2.wav" type="AudioStream" id=16]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_4.wav" type="AudioStream" id=17]
[ext_resource path="res://falling_writer/scripts/update_collision_shape_2d_to_bottom_screen.gd" type="Script" id=18]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "popup"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[node name="FunTextEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 270, 250 )
theme = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.176471, 0.203922, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true
script = ExtResource( 5 )
typing_sounds = [ ExtResource( 4 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 14 ) ]
falling_label_box = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 984.0
margin_bottom = 560.0

[node name="IncreaseFontSize" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
sync_node_font_size = NodePath("../DecreaseFontSize")
icon_img_path = ExtResource( 11 )

[node name="DecreaseFontSize" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 34.0
margin_right = 64.0
type = 1
sync_node_font_size = NodePath("../IncreaseFontSize")
icon_img_path = ExtResource( 9 )

[node name="New" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 68.0
margin_right = 98.0
type = 2
icon_img_path = ExtResource( 10 )

[node name="Save" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 102.0
margin_right = 132.0
type = 3
icon_img_path = ExtResource( 1 )

[node name="Load" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 136.0
margin_right = 166.0
type = 4
icon_img_path = ExtResource( 7 )

[node name="WordCount" type="ColorRect" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 230.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
hint_tooltip = "Word Count"
color = Color( 0.137255, 0.145098, 0.168627, 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/WordCount"]
margin_right = 60.0
margin_bottom = 29.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved" type="ColorRect" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 170.0
margin_right = 230.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
color = Color( 0.137255, 0.145098, 0.168627, 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Saved"]
margin_right = 60.0
margin_bottom = 29.0
size_flags_vertical = 1
text = "SAVED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Saved"]
anims/RESET = SubResource( 2 )
anims/popup = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2( 512, 610 )
shape = SubResource( 1 )
script = ExtResource( 18 )

[node name="Light2D" type="Light2D" parent="Node2D"]
position = Vector2( 500, -865 )
scale = Vector2( 3.58008, 3.58008 )
texture = ExtResource( 8 )
shadow_enabled = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 60.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 150, 52.5 )
access = 2
filters = PoolStringArray( "*.txt" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SplashScreen" parent="." instance=ExtResource( 6 )]

[connection signal="gui_input" from="VBoxContainer/MarginContainer/VBoxContainer/TextEdit" to="VBoxContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_TextEdit_gui_input"]
[connection signal="file_selected" from="FileDialog" to="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Save" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog" to="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Load" method="_on_FileDialog_file_selected"]
